change on day two

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <br>
 <br>
 <p> And the New line has been added now go ahead enjoy the GITBASH </p>
+<p> And the New line has been added on day two </p>
 <br>
 
 <style>
